chore: move deployment to helm chart umbrella

--- a/deployments/helm/subcharts/admission/templates/secret.yaml
+++ b/deployments/helm/subcharts/admission/templates/secret.yaml
@@ -9,5 +9,5 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  pg-user: {{ .Values.postgresql.postgresUser | b64enc | quote }}
-  pg-password: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
+  pg-user: {{ .Values.postgresql.postgresqlUsername | b64enc | quote }}
+  pg-password: {{ .Values.postgresql.postgresqlPassword | b64enc | quote }}
