--- a/deployments/helm/subcharts/admission/templates/deployment.yaml
+++ b/deployments/helm/subcharts/admission/templates/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  replicas: {{ .Value.replicas }}
+  replicas: 1
   template:
     metadata:
       labels:
