--- a/cmd/admission/BUILD.bazel
+++ b/cmd/admission/BUILD.bazel
@@ -1,14 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
-
-go_image(
-    name = "go_image",
-    embed = [":go_default_library"],
-    importpath = "github.com/Shikanime/unicampus/internal/app/admission",
-    goarch = "amd64",
-    goos = "linux",
-    pure = "on",
-)
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
 go_library(
     name = "go_default_library",
@@ -29,4 +20,13 @@ go_binary(
     name = "admission",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+container_image(
+    name = "admission_image",
+    base ="@base//image",
+    files = [":admission"],
+    cmd = ["admission"],
+    user = "worker",
+    ports = ["50051"]
 )
