chore: move Bazel root to build

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,4 +1,1 @@
-load("@bazel_gazelle//:def.bzl", "gazelle")
-
-# gazelle:prefix github.com/Shikanime/unicampus
-gazelle(name = "gazelle")
+build/root/BUILD.bazel
