--- a/cmd/account/BUILD.bazel
+++ b/cmd/account/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     importpath = "github.com/Shikanime/unicampus/cmd/account",
     visibility = ["//visibility:private"],
     deps = [
-        "//api/account/v1alpha1:go_default_library",
+        "//api/account/v1alpha1:unicampus_api_account_v1_go_proto",
         "//internal/app/admission/repositories/persistence:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//reflection:go_default_library",
