--- a/cmd/admission/BUILD.bazel
+++ b/cmd/admission/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 
 go_library(
     name = "go_default_library",
@@ -7,7 +7,7 @@ go_library(
     importpath = "github.com/Shikanime/unicampus/cmd/admission",
     visibility = ["//visibility:private"],
     deps = [
-        "//api/admission/v1alpha1:go_default_library",
+        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
         "//internal/app/admission:go_default_library",
         "//internal/app/admission/repositories/indexer:go_default_library",
         "//internal/app/admission/repositories/persistence:go_default_library",
@@ -22,11 +22,10 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-container_image(
+go_image(
     name = "admission_image",
-    base ="@base//image",
-    files = [":admission"],
-    cmd = ["admission"],
-    user = "worker",
-    ports = ["50051"]
+    binary = ":admission",
+    goarch = "arm",
+    goos = "linux",
+    pure = "on",
 )
