--- a/internal/app/admission/BUILD.bazel
+++ b/internal/app/admission/BUILD.bazel
@@ -10,7 +10,7 @@ go_library(
     importpath = "github.com/Shikanime/unicampus/internal/app/admission",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//api/admission/v1alpha1:go_default_library",
+        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
         "//internal/app/admission/repositories/indexer:go_default_library",
         "//internal/app/admission/repositories/persistence:go_default_library",
         "//pkg/admission:go_default_library",
