--- a/internal/app/unictl/BUILD.bazel
+++ b/internal/app/unictl/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     importpath = "github.com/Shikanime/unicampus/internal/app/unictl",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//api/admission/v1alpha1:go_default_library",
+        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
