--- a/cmd/admission/BUILD.bazel
+++ b/cmd/admission/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
 
 go_library(
     name = "go_default_library",
@@ -22,10 +23,18 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-go_image(
-    name = "admission_image",
-    binary = ":admission",
-    goarch = "arm",
-    goos = "linux",
-    pure = "on",
+container_image(
+    name = "go_default_image",
+    files = [":admission"],
+    entrypoint = ["./admission"],
+    ports = ["50051"],
+    stamp = True,
+)
+
+container_push(
+    name = "push_admission_image",
+    format = "Docker",
+    image = ":go_default_image",
+    registry = "registry.gitlab.com",
+    repository = "deva-hub/unicampus/unicampus",
 )
