--- a/deployments/helm/unicampus/values.yaml
+++ b/deployments/helm/unicampus/values.yaml
@@ -1,48 +1,20 @@
-# Default values for unicampus.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+postgresql:
+  postgresqlPassword: unicampus
+  replication:
+    slaveReplicas: 0
+    password: unicampus
 
-replicaCount: 1
+elasticsearch:
+  master:
+    replicas: 2
+  client:
+    replicas: 2
 
-image:
-  repository: nginx
-  tag: stable
-  pullPolicy: IfNotPresent
-
-nameOverride: ""
-fullnameOverride: ""
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  paths: []
-  hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+neo4j:
+  acceptLicenseAgreement: "yes"
+  authEnabled: true
+  neo4jPassword: unicampus
+  core:
+    numberOfServers: 3
+  readReplica:
+    numberOfServers: 0
