--- a/internal/app/admission/commands/BUILD.bazel
+++ b/internal/app/admission/commands/BUILD.bazel
@@ -15,6 +15,8 @@ go_library(
         "//internal/app/admission/repositories/persistence:go_default_library",
         "//internal/pkg/delivers:go_default_library",
         "//internal/pkg/services:go_default_library",
+        "//pkg/admission:go_default_library",
+        "@com_github_satori_go_uuid//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
