--- a/api/admission/v1alpha1/BUILD.bazel
+++ b/api/admission/v1alpha1/BUILD.bazel
@@ -1,17 +1,14 @@
-load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
-proto_library(
-    name = "unicampus_api_admission_v1alpha1_proto",
-    srcs = ["generated.proto"],
-    visibility = ["//visibility:public"],
-    deps = ["@com_github_googleapis_googleapis//google/api:annotations_proto"],
-)
-
-go_proto_library(
-    name = "unicampus_api_admission_v1alpha1_go_proto",
-    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
+go_library(
+    name = "go_default_library",
+    srcs = ["generated.pb.go"],
     importpath = "github.com/Shikanime/unicampus/api/admission/v1alpha1",
-    proto = ":unicampus_api_admission_v1alpha1_proto",
     visibility = ["//visibility:public"],
-    deps = ["@org_golang_google_genproto//googleapis/api/annotations:go_default_library"],
+    deps = [
+        "@com_github_golang_protobuf//proto:go_default_library",
+        "@org_golang_google_genproto//googleapis/api/annotations:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_net//context:go_default_library",
+    ],
 )
