--- a/internal/app/admission/commands/BUILD.bazel
+++ b/internal/app/admission/commands/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
     importpath = "github.com/Shikanime/unicampus/internal/app/admission/commands",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
+        "//api/admission/v1alpha1:go_default_library",
         "//internal/app/admission:go_default_library",
         "//internal/app/admission/repositories/indexer:go_default_library",
         "//internal/app/admission/repositories/persistence:go_default_library",
