--- a/pkg/objconv/BUILD.bazel
+++ b/pkg/objconv/BUILD.bazel
@@ -11,7 +11,7 @@ go_library(
     importpath = "github.com/Shikanime/unicampus/pkg/objconv",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//api/admission/v1alpha1:unicampus_api_admission_v1alpha1_go_proto",
+        "//api/admission/v1alpha1:go_default_library",
         "//pkg/admission:go_default_library",
     ],
 )
