--- a/cmd/admission/BUILD.bazel
+++ b/cmd/admission/BUILD.bazel
@@ -28,7 +28,7 @@ container_image(
 )
 
 container_push(
-    name = "push_admission_image",
+    name = "admission_image",
     format = "Docker",
     image = ":go_default_image",
     registry = "registry.gitlab.com",
