--- a/api/account/v1alpha1/BUILD.bazel
+++ b/api/account/v1alpha1/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["generated.pb.go"],
-    importpath = "github.com/Shikanime/unicampus/api/account/v1alpha1",
+    importpath = "gitlab.com/deva-hub/unicampus/api/account/v1alpha1",
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_golang_protobuf//proto:go_default_library",
