--- a/cmd/unictl/BUILD.bazel
+++ b/cmd/unictl/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["cli.go"],
-    importpath = "github.com/Shikanime/unicampus/cmd/unictl",
+    importpath = "gitlab.com/deva-hub/unicampus/cmd/unictl",
     visibility = ["//visibility:private"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
