--- a/internal/app/admission/BUILD.bazel
+++ b/internal/app/admission/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
         "school.go",
         "student.go",
     ],
-    importpath = "github.com/Shikanime/unicampus/internal/app/admission",
+    importpath = "gitlab.com/deva-hub/unicampus/internal/app/admission",
     visibility = ["//:__subpackages__"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
