--- a/internal/app/unictl/BUILD.bazel
+++ b/internal/app/unictl/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["school.go"],
-    importpath = "github.com/Shikanime/unicampus/internal/app/unictl",
+    importpath = "gitlab.com/deva-hub/unicampus/internal/app/unictl",
     visibility = ["//:__subpackages__"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
