--- a/internal/pkg/services/BUILD.bazel
+++ b/internal/pkg/services/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
         "neo4j.go",
         "postgresql.go",
     ],
-    importpath = "github.com/Shikanime/unicampus/internal/pkg/services",
+    importpath = "gitlab.com/deva-hub/unicampus/internal/pkg/services",
     visibility = ["//:__subpackages__"],
     deps = [
         "@com_github_jinzhu_gorm//:go_default_library",
