--- a/pkg/admission/BUILD.bazel
+++ b/pkg/admission/BUILD.bazel
@@ -3,6 +3,6 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["entites.go"],
-    importpath = "github.com/Shikanime/unicampus/pkg/admission",
+    importpath = "gitlab.com/deva-hub/unicampus/pkg/admission",
     visibility = ["//visibility:public"],
 )
