--- a/pkg/objconv/BUILD.bazel
+++ b/pkg/objconv/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
         "school.go",
         "student.go",
     ],
-    importpath = "github.com/Shikanime/unicampus/pkg/objconv",
+    importpath = "gitlab.com/deva-hub/unicampus/pkg/objconv",
     visibility = ["//:__subpackages__"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
