refactor: restructure based on Kubernetes and DDD

--- a/cmd/admission/app/commands/BUILD.bazel
+++ b/cmd/admission/app/commands/BUILD.bazel
@@ -6,13 +6,13 @@ go_library(
         "setup.go",
         "start.go",
     ],
-    importpath = "gitlab.com/deva-hub/unicampus/internal/app/admission/commands",
+    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/commands",
     visibility = ["//:__subpackages__"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
-        "//internal/app/admission:go_default_library",
-        "//internal/app/admission/repositories/indexer:go_default_library",
-        "//internal/app/admission/repositories/persistence:go_default_library",
+        "//cmd/admission/app:go_default_library",
+        "//cmd/admission/app/repositories/indexer:go_default_library",
+        "//cmd/admission/app/repositories/persistence:go_default_library",
         "//internal/pkg/delivers:go_default_library",
         "//internal/pkg/services:go_default_library",
         "//pkg/admission:go_default_library",
