--- a/cmd/admission/app/repositories/recommandation/BUILD.bazel
+++ b/cmd/admission/app/repositories/recommandation/BUILD.bazel
@@ -2,8 +2,11 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["repo.go"],
-    importpath = "gitlab.com/deva-hub/unicampus/internal/app/admission/repositories/recommandation",
+    srcs = [
+        "region.go",
+        "repo.go",
+    ],
+    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/repositories/recommandation",
     visibility = ["//:__subpackages__"],
     deps = [
         "//internal/pkg/services:go_default_library",
