--- a/cmd/admission/app/BUILD.bazel
+++ b/cmd/admission/app/BUILD.bazel
@@ -7,12 +7,12 @@ go_library(
         "school.go",
         "student.go",
     ],
-    importpath = "gitlab.com/deva-hub/unicampus/internal/app/admission",
+    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app",
     visibility = ["//:__subpackages__"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
-        "//internal/app/admission/repositories/indexer:go_default_library",
-        "//internal/app/admission/repositories/persistence:go_default_library",
-        "//pkg/objconv:go_default_library",
+        "//cmd/admission/app/repositories/indexer:go_default_library",
+        "//cmd/admission/app/repositories/persistence:go_default_library",
+        "//pkg/admission:go_default_library",
     ],
 )
