--- a/cmd/admission/app/repositories/indexer/BUILD.bazel
+++ b/cmd/admission/app/repositories/indexer/BUILD.bazel
@@ -3,15 +3,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "application.go",
-        "indenfier.go",
+        "repo.go",
         "school.go",
-        "student.go",
     ],
-    importpath = "gitlab.com/deva-hub/unicampus/pkg/objconv",
+    importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/repositories/indexer",
     visibility = ["//:__subpackages__"],
     deps = [
-        "//api/admission/v1alpha1:go_default_library",
+        "//internal/pkg/services:go_default_library",
         "//pkg/admission:go_default_library",
+        "@com_github_olivere_elastic//:go_default_library",
     ],
 )
