--- a/cmd/admission/app/commands/BUILD.bazel
+++ b/cmd/admission/app/commands/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
         "start.go",
     ],
     importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/commands",
-    visibility = ["//:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
         "//cmd/admission/app:go_default_library",
@@ -16,7 +16,6 @@ go_library(
         "//internal/pkg/delivers:go_default_library",
         "//internal/pkg/services:go_default_library",
         "//pkg/admission:go_default_library",
-        "@com_github_satori_go_uuid//:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
     ],
 )
