--- a/cmd/admission/app/repositories/indexer/BUILD.bazel
+++ b/cmd/admission/app/repositories/indexer/BUILD.bazel
@@ -7,7 +7,7 @@ go_library(
         "school.go",
     ],
     importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/repositories/indexer",
-    visibility = ["//:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/services:go_default_library",
         "//pkg/admission:go_default_library",
