--- a/cmd/admission/app/repositories/persistence/BUILD.bazel
+++ b/cmd/admission/app/repositories/persistence/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "region.go",
         "repo.go",
         "school.go",
+        "shared.go",
         "student.go",
     ],
     importpath = "gitlab.com/deva-hub/unicampus/cmd/admission/app/repositories/persistence",
