--- a/cmd/admission/app/repositories/recommandation/BUILD.bazel
+++ b/cmd/admission/app/repositories/recommandation/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/services:go_default_library",
+        "//pkg/admission:go_default_library",
         "@com_github_johnnadratowski_golang_neo4j_bolt_driver//:go_default_library",
     ],
 )
