--- a/cmd/unictl/app/BUILD.bazel
+++ b/cmd/unictl/app/BUILD.bazel
@@ -4,7 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = ["school.go"],
     importpath = "gitlab.com/deva-hub/unicampus/cmd/unictl/app",
-    visibility = ["//:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
         "//api/admission/v1alpha1:go_default_library",
         "@com_github_satori_go_uuid//:go_default_library",
