chore: refactor operationnal

--- a/deployments/helm/unicampus/requirements.yaml
+++ b/deployments/helm/unicampus/requirements.yaml
@@ -1,10 +1,10 @@
 dependencies:
 - name: postgresql
   version: 3.9.1
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: file://../subcharts/postgresql
 - name: neo4j
   version: 0.10.0
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: file://../subcharts/neo4j
 - name: elasticsearch
   version: 1.17.0
-  repository: https://kubernetes-charts.storage.googleapis.com/
+  repository: file://../subcharts/elasticsearch
