--- a/cmd/education/BUILD.bazel
+++ b/cmd/education/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 
 go_library(
     name = "go_default_library",
@@ -16,7 +17,13 @@ go_library(
 )
 
 go_binary(
-    name = "education",
+    name = "education_binary",
     embed = [":go_default_library"],
+    visibility = ["//visibility:public"],
+)
+
+go_image(
+    name = "education_image",
+    binary = ":education_binary",
     visibility = ["//visibility:public"],
 )
