--- a/deployments/helm/unicampus/Chart.yaml
+++ b/deployments/helm/unicampus/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "0.1.0"
 description: Unicampus infrastructure
-name: unicampus
+name: unicampus-operation
 version: 0.1.0
