--- a/internal/app/unictl/BUILD.bazel
+++ b/internal/app/unictl/BUILD.bazel
@@ -3,8 +3,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["school.go"],
-    importpath = "gitlab.com/deva-hub/unicampus/cmd/unictl/app",
-    visibility = ["//visibility:public"],
+    importpath = "gitlab.com/deva-hub/unicampus/internal/app/unictl",
+    visibility = ["//:__subpackages__"],
     deps = [
         "//api/education/v1alpha1:go_default_library",
         "@com_github_google_uuid//:go_default_library",
