--- a/packages/javascript/packages/web-client/package.json
+++ b/packages/javascript/packages/web-client/package.json
@@ -11,6 +11,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "grpc-web": "^1.0.3",
     "register-service-worker": "^1.5.2",
     "uikit": "^3.0.2",
     "vue": "^2.5.21",
